Bug 501461 - Brightness applet tries to access non-existent dbus action "KeyboardBrightnessControl"
Summary: Brightness applet tries to access non-existent dbus action "KeyboardBrightnes...
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Brightness and Color widget (other bugs)
Version First Reported In: master
Platform: Other Linux
: NOR minor
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-03-13 18:14 UTC by cwo
Modified: 2025-04-04 23:31 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.4.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description cwo 2025-03-13 18:14:14 UTC
SUMMARY

I don't have a keyboard backlight. On each plasmashell startup, I get a warning as follows (for each Brightness applet I have):

org.kde.applets.brightness: D-Bus action "KeyboardBrightnessControl" is not available at service "org.kde.Solid.PowerManagement"

This is otherwise harmless; of course I can't control the brightness of something I don't have. But the warning is unnecessary log spam.

STEPS TO REPRODUCE
1.  Start plasmashell while not having a brightness-controllable keyboard backlight

OBSERVED RESULT

Warning about D-Bus action not being available

EXPECTED RESULT

No warning

SOFTWARE/OS VERSIONS

Operating System: Fedora Linux 41
KDE Plasma Version: 6.3.80
KDE Frameworks Version: 6.13.0
Qt Version: 6.8.2
Kernel Version: 6.13.5-200.fc41.x86_64 (64-bit)
Graphics Platform: Wayland
Processors: 4 × Intel® Core™ i5-6200U CPU @ 2.30GHz
Memory: 16 GiB of RAM (15.5 GiB usable)
Graphics Processor: Intel® HD Graphics 520

ADDITIONAL INFORMATION
Comment 1 Bug Janitor Service 2025-04-04 15:25:11 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/powerdevil/-/merge_requests/540
Comment 2 cwo 2025-04-04 16:18:22 UTC
Git commit 2039c96da97c550f76b782fed2f03a14705a6ca9 by Christoph Wolk.
Committed on 04/04/2025 at 15:23.
Pushed by cwo into branch 'master'.

applets/brightness: downgrade severity of action unavailable message

If the KeyboardBrightnessControl action is not available, a warning is
logged. This seems a bit high, as this is the expected case for many
systems.

Instead, use Info severity - this still allows users to see the message
without also seeing all the debug messages, but removes it in the
default case (as the default minimum severity is already set to
Warning).

M  +1    -1    applets/brightness/plugin/keyboardbrightnesscontrol.cpp

https://invent.kde.org/plasma/powerdevil/-/commit/2039c96da97c550f76b782fed2f03a14705a6ca9